Phase 0: foundation, shared module, docs, and pre-existing fixes
Add socialnetwork-common Gradle module housing shared types:
- com.socialnetwork.common.security.UserPrincipal (canonical principal)
- com.socialnetwork.common.dto.BaseResponse (canonical envelope)
- com.socialnetwork.common.config.SessionConfig (canonical session)
- UserPrincipalConverter decouples service User models from shared lib
- Wire :socialnetwork-common into root + 6 services
- Update 15+ imports from com.socialnetwork.dto.* to com.socialnetwork.common.*
- Delete duplicate copies of UserPrincipal/BaseResponse/SessionConfig

Add baseline docs: DECISIONS (12 ADRs), queues, CHANGELOG, LOCAL_DEV.

Includes pre-existing in-progress security/config/docker/frontend fixes
already in working tree; consolidated to keep build green.